--- a/registerCryptoName.html
+++ b/registerCryptoName.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>CryptoName - Elastos Name</title>
+  <link href="images/favicon.png" rel="icon">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
