--- a/registerCryptoName.html
+++ b/registerCryptoName.html
@@ -128,7 +128,7 @@
               </ul>
 
               <div class="text-center">
-                 <button class="btn btn-primary btn-lg" type="submit" @click="pay()" :disabled="namePrice==0 || depositAmount==0">Continue to Pay</button>
+                 <button class="btn btn-primary btn-lg" type="button" @click="pay()" :disabled="namePrice==0 || depositAmount==0">Continue to Pay</button>
               </div>
            </form>
         </div>
