--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                    Price: <span class="text-danger">{{ currentPrice }}</span> ELA (EST)
                  </label>
                </div>
-               <button class="btn btn-primary text-light" type="submit" @click="register()" :disabled="!nameResult">Register</button>
+               <button class="btn btn-primary text-light" type="button" @click="register()" :disabled="!nameResult">Register</button>
             </form>
          </div>
       </main>
