--- a/registerCryptoName.html
+++ b/registerCryptoName.html
@@ -77,9 +77,9 @@
               <hr class="mb-4">
               <h4 class="mb-3">Deposit ELA to sidechain</h4>
               <div class="row custom-control">
-                 <div class="custom-control custom-radio">
-                    <input id="credit" name="depositAmount" type="radio" class="custom-control-input" value="0.5" v-model="depositAmount" checked required>
-                    <label class="custom-control-label" for="credit">0.5 ELA</label>
+                 <div class="custom-control custom-radio active">
+                    <input id="credit" name="depositAmount" type="radio" class="custom-control-input active" value="0.5" v-model="depositAmount" checked="checked" required>
+                    <label class="custom-control-label active" for="credit">0.5 ELA</label>
                  </div>
                  <div class="custom-control custom-radio">
                     <input id="debit" name="depositAmount" type="radio" class="custom-control-input" value="5" v-model="depositAmount" required>
