--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                      <a class="nav-link" href="#" >Home</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
+                     <a class="nav-link" href="#" >Guide</a>
+                  </li>
+                  <li class="nav-item" data-target="account-main" @click="click('account', $event)">
+                     <a class="nav-link" href="#" >Developer</a>
+                  </li>
+                  <li class="nav-item" data-target="account-main" @click="click('account', $event)">
                      <a class="nav-link" href="#" >Account</a>
                   </li>
                </ul>
