--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
       <header class="w-100 fixed-top">
          <nav id="navbar" class="navbar navbar-expand-lg navbar-light rounded">
-            <a class="navbar-brand" href="#"><img class="mr-2" src="images/logo.png" width="36px" height="36px"/>CryptoName</a>
+            <a class="navbar-brand" href=""><img class="mr-2" src="images/logo.png" width="36px" height="36px"/>CryptoName</a>
             <button class="navbar-toggler mr-1 collapsed" type="button" data-toggle="collapse" data-target="#menu-nav" aria-controls="menu-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="col collapse navbar-collapse text-right" id="menu-nav">
                <ul class="navbar-nav mr-auto col">
                   <li class="nav-item active" data-target="home-main" @click="click('home', $event)">
-                     <a class="nav-link" href="#" >Home</a>
+                     <a class="nav-link" href="" >Home</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
-                     <a class="nav-link" href="#" >Guide</a>
+                     <a class="nav-link" href="" >Guide</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
-                     <a class="nav-link" href="#" >Account</a>
+                     <a class="nav-link" href="" >Account</a>
                   </li>
                </ul>
 
@@ -76,7 +76,7 @@
                   <p class="card-text text-muted" style="font-size: 0.8rem">{{ new Date(item.expiration * 1000).Format('yyyy-MM-dd hh:mm:ss') }}</p>
                 </div>
                 <div class="col">
-                  <a href="#" class="card-link text-dark">
+                  <a href="" class="card-link text-dark">
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-right-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                        <path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
