--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="col collapse navbar-collapse text-right" id="menu-nav">
                <ul class="navbar-nav mr-auto col">
                   <li class="nav-item active" data-target="home-main" @click="click('home', $event)">
-                     <a class="nav-link" href="" >Home</a>
+                     <a class="nav-link btn btn-link">Home</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
-                     <a class="nav-link" href="" >Guide</a>
+                     <button class="nav-link btn btn-link">Guide</button>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
-                     <a class="nav-link" href="" >Account</a>
+                     <a class="nav-link btn btn-link">Account</a>
                   </li>
                </ul>
 
