--- a/registerCryptoName.html
+++ b/registerCryptoName.html
@@ -109,21 +109,14 @@
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                   <div>
-                    <h6 class="my-0">Setup&Transfer Fee</h6>
-                    <small class="text-muted">The cost of transferring</small>
-                  </div>
-                  <span class="text-muted">0.1</span>
-                </li>
-                <li class="list-group-item d-flex justify-content-between bg-light">
-                  <div>
                     <h6 class="my-0">Service Fee</h6>
-                    <small>Proxy service fee</small>
+                    <small class="text-muted">Setup&Transfer&Others fee</small>
                   </div>
                   <span class="text-muted">0.5</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between text-success">
                   <span>Total (ELA)</span>
-                  <strong>{{ totalAmount=Math.ceil((parseFloat(namePrice)+parseFloat(depositAmount)+parseFloat(0.2)+parseFloat(0.5))*1000)/1000 }}</strong>
+                  <strong>{{ totalAmount=Math.ceil((parseFloat(namePrice)+parseFloat(depositAmount)+parseFloat(0.5))*1000)/1000 }}</strong>
                 </li>
               </ul>
 
