--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      <a class="nav-link btn btn-link">Home</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
-                     <button class="nav-link btn btn-link">Guide</button>
+                     <a class="nav-link btn btn-link">Guide</a>
                   </li>
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
                      <a class="nav-link btn btn-link">Account</a>
@@ -76,7 +76,7 @@
                   <p class="card-text text-muted" style="font-size: 0.8rem">{{ new Date(item.expiration * 1000).Format('yyyy-MM-dd hh:mm:ss') }}</p>
                 </div>
                 <div class="col">
-                  <a href="" class="card-link text-dark">
+                  <a @click="editName(item.name)" class="card-link text-dark">
                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-right-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                        <path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
@@ -90,7 +90,7 @@
             <div class="card  rounded-lg mx-auto mb-3" style="width: 20rem; height: auto; ">
               <div class="card-body row">
                 <div class="col-10">
-                  <h4 class="card-title font-weight-bold">+New</h4>
+                  <h4 class="card-title font-weight-bold"><a class="text-muted" href="/">+New</a></h4>
                   <p class="card-text text-muted" style="font-size: 0.8rem"></p>
                 </div>
                 <div class="col">
@@ -109,7 +109,7 @@
         </div>
       </footer>
 
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="js/jquery-3.5.1.slim.min.js"></script>
       <script>window.jQuery</script>
       <script src="js/bootstrap.bundle.js"></script>
       <script src="js/web3.min.js"></script>
@@ -121,23 +121,7 @@
       <script src="js/crypton.js"></script>
       <script src="js/web3bridge.js"></script>
       <script src="main.js"></script>
-      <script>
-         $(document).ready(function() {
-             // $( ".mr-auto .nav-item" ).bind( "click", function(event) {
-             //     // //event.preventDefault();
-             //     // var clickedItem = $( this );
-             //     // $( ".mr-auto .nav-item" ).each( function() {
-             //     //     var target = $( this ).data('target');
-             //     //     $( "#"+target ).addClass('d-none');
-             //     //     $( this ).removeClass( "active" );
-             //     // });
-             //     // clickedItem.addClass( "active" );
-             //     // var target = $( this ).data('target');
-             //     // $( "#"+target ).removeClass('d-none');
-             //     // $('.navbar-collapse').collapse('hide');
-             // });
-         });
-      </script>
+
 
    </body>
 </html>
