--- a/editCryptoName.html
+++ b/editCryptoName.html
@@ -97,6 +97,7 @@
   <script>window.jQuery</script>
   <script src="js/bootstrap.bundle.js"></script>
   <script src="js/web3.min.js"></script>
+  <script src="js/elaphant.web3.provider.min.js"></script>
   <script src="js/vue.min.js"></script>
   <script src="js/vue-clipboard.min.js"></script>
   <script src="js/sha256.min.js"></script>
