--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                   <li class="nav-item active" data-target="home-main" @click="click('home', $event)">
                      <a class="nav-link btn btn-link">Home</a>
                   </li>
-                  <li class="nav-item" data-target="account-main" @click="click('account', $event)">
+                  <!--li class="nav-item" data-target="account-main" @click="click('account', $event)">
                      <a class="nav-link btn btn-link">Guide</a>
-                  </li>
+                  </li-->
                   <li class="nav-item" data-target="account-main" @click="click('account', $event)">
                      <a class="nav-link btn btn-link">Account</a>
                   </li>
@@ -123,6 +123,7 @@
       <script>window.jQuery</script>
       <script src="js/bootstrap.bundle.js"></script>
       <script src="js/web3.min.js"></script>
+      <script src="js/elaphant.web3.provider.min.js"></script>
       <script src="js/vue.min.js"></script>
       <script src="js/vue-clipboard.min.js"></script>
       <script src="js/sha256.min.js"></script>
