--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                    <span class="input-group-text" id="basic-addon2">.elastos.name</span>
                  </div>
                </div>
-               <div class="mb-3 text-center">
-                 <label>
+               <div class="mb-3 text-center" >
+                 <label v-if="currentPrice">
                    Price: <span class="text-danger">{{ currentPrice }}</span> ELA (EST)
                  </label>
                </div>
