--- a/editCryptoName.html
+++ b/editCryptoName.html
@@ -46,7 +46,7 @@
               </div>
               <hr class="mb-4">
               <h4 class="mb-3">Basic info</h4>
-              <div class="mb-3" v-for="(value, key) in domainInfo">
+              <div class="mb-3" v-for="(value, key) in domainInfo" v-if="key != 'name'">
                  <label class="text-right">{{ key }}</label>
                  <input type="text" class="form-control" v-model="value" required>
                  <button class="btn btn-primary btn-sm m-1" type="button" @click="submitChange('set', key, value)">Modify</button>
