--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
 
       <script src="js/jquery-3.5.1.slim.min.js"></script>
       <script>window.jQuery</script>
+      <script src="js/jquery-1.11.0.min.js"></script>
+      <script src="js/jquery.loading.min.js"></script>
       <script src="js/bootstrap.bundle.js"></script>
       <script src="js/web3.min.js"></script>
       <script src="js/elaphant.web3.provider.min.js"></script>
