增加注册和编辑，修改crypton.js

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 
           <div class="col">
               <div class="col-image">
+                <a @click="renew(item.name)" class="card-link text-dark">
+                  Renew
+                  </a>
                 <a @click="transferName(item.name)" class="card-link text-dark">
                   Transfer
                   </a>
