--- a/transferCryptoName.html
+++ b/transferCryptoName.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   
 </head>
 <body class="bg-light">
@@ -18,6 +19,7 @@
         <div class="col-11 mx-auto">
             <form class="needs-validation" novalidate>
                 <label class="text-right">To CryptoName:</label>
+                <p class="text-danger danger-text-font" v-show="toCryptoName.length > 0 && transferAddress.length == 0">CryptoName not existed</p>
                 <div class="input-group mb-3 shadow-sm">
                    <input type="text" class="form-control rounded" aria-label="Recipient's username" aria-describedby="basic-addon2" v-model="toCryptoName" @input="transferDiagChange()">
                 </div>
