--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
     </div>
   </main>
 
-  <main role="main" id="account-main" class="row h-100">
-    <div class="container align-self-start row" v-if="loaded">
-      <!-- <div class="row" v-if="loaded"></div> -->
-      <div class="card rounded-lg mb-3 name-container" style="width: 256px; height: 158px;" v-for="(item, index) in myNames">
-        <div class="card-body row">
+  <main role="main" id="account-main" class="row h-100 d-none">
+    <div class="container align-self-start mr-auto ml-auto row" v-if="loaded">
+       <div class="card rounded-lg mx-auto mb-3" style="width: 20rem; height: auto;" v-for="(item, index) in myNames">
+         <div class="card-body row">
           <a @click="window.open('https://'+item.name+'.elastos.name')" class="card-link text-dark">
-            <!-- <div class="col-10"> -->
-              <div>
+            <div class="col-10">
               <h5 class="card-title font-weight-bold mb-0">{{ item.name }}</h5>
               <span class="text-muted card-title font-weight-bold text-truncate"
                 style="font-size: 0.8rem">.elastos.name</span>
@@ -90,7 +88,7 @@
           </a>
 
           <!-- <div class="col"> -->
-              <div class="col-image">
+             <div class="col-image">
                 <a @click="renew(item.name)" class="card-link text-dark">
                   Renew
                   </a>
@@ -100,7 +98,7 @@
                   <a @click="editName(item.name)" class="card-link text-dark">
                   Edit
                 </a>
-              </div>
+              </div> 
             <!-- <a @click="window.open('https://'+item.name+'.elastos.name')" class="card-link text-dark">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up-right-circle" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
